Added profile from facebook

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="item_deleted">Item deleted</string>
     <string name="place_default_distance">Distance: too far</string>
 
+    <string name="age_suffix">ans</string>
+
 </resources>
