--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,24 +3,26 @@
 
     <string name="app_name">Entourage</string>
     <string name="app_fb_id">1446909595547245</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
-
-
     <string name="title_profile">Mon profil</string>
     <string name="title_places">Mes lieux</string>
     <string name="title_clothes">Ma tenue</string>
     <string name="title_wanted">Avis de recherche</string>
     <string name="title_settings">Préférences</string>
-
     <string name="search_place_hint">Rechercher un lieu...</string>
     <string name="tap_to_undo">Tap to undo</string>
     <string name="item_deleted">Item deleted</string>
     <string name="place_default_distance">Distance: too far</string>
-
     <string name="age_suffix">ans</string>
-
+    <string name="profile_bio_title">Ma bio</string>
+    <string name="profile_bio_placeholder">A propos de moi...</string>
+    <string name="title_activity_pick_picture">PickPictureActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="action_back">Retour</string>
+    <string name="title_albums">Albums</string>
+    <string name="photo">photos</string>
 </resources>
